src/Domain/Compiler/Tests/Expression/IntegerLiteral/HexadecimalLiteral/__Baselines__/HexadecimalLiteral_SInt64Overflow-StashIr.error
error: Integral expression '0xffff_ffff_ffff_ffff' does not fit into integral type 's32'.
--> main.hs:7:17
  | 
7 |         return -0xffff_ffff_ffff_ffff;}}
  |                 ^^^^^^^^^^^^^^^^^^^^^
